123/MyProject/src/objects/Credit_card__c.object
<CustomObject>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reward_PoInts__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Reward Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Credit Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit_Card</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>